--- a/WhisperGUI/filterForm.ui
+++ b/WhisperGUI/filterForm.ui
@@ -32,7 +32,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Filter</string>
   </property>
   <property name="modal">
    <bool>true</bool>
@@ -55,8 +55,8 @@
    <widget class="QWidget" name="horizontalLayoutWidget_5">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>70</y>
+      <x>70</x>
+      <y>80</y>
       <width>125</width>
       <height>31</height>
      </rect>
@@ -74,7 +74,7 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>Filter:</string>
+        <string>Distance:</string>
        </property>
       </widget>
      </item>
@@ -82,14 +82,50 @@
       <widget class="QComboBox" name="filterCombo">
        <item>
         <property name="text">
-         <string>Outside</string>
+         <string>5</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>Inside</string>
+         <string>10</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>25</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>50</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="verticalLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>0</y>
+      <width>160</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QCheckBox" name="checkBox_2">
+       <property name="text">
+        <string>At least 50 reviews</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="checkBox">
+       <property name="text">
+        <string>At least 4.5 stars</string>
+       </property>
       </widget>
      </item>
     </layout>
@@ -117,168 +153,10 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="horizontalLayoutWidget_7">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>241</width>
-     <height>52</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_7">
-    <item>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>X0:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QSlider" name="x0Slider">
-          <property name="maximum">
-           <number>320</number>
-          </property>
-          <property name="singleStep">
-           <number>1</number>
-          </property>
-          <property name="value">
-           <number>100</number>
-          </property>
-          <property name="sliderPosition">
-           <number>100</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="tickPosition">
-           <enum>QSlider::TicksBelow</enum>
-          </property>
-          <property name="tickInterval">
-           <number>60</number>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_2">
-        <item>
-         <widget class="QLabel" name="label_3">
-          <property name="text">
-           <string>Y0:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QSlider" name="y0Slider">
-          <property name="maximum">
-           <number>361</number>
-          </property>
-          <property name="singleStep">
-           <number>1</number>
-          </property>
-          <property name="value">
-           <number>100</number>
-          </property>
-          <property name="sliderPosition">
-           <number>100</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="tickPosition">
-           <enum>QSlider::TicksBelow</enum>
-          </property>
-          <property name="tickInterval">
-           <number>40</number>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QVBoxLayout" name="verticalLayout_3">
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_3">
-        <item>
-         <widget class="QLabel" name="label_4">
-          <property name="text">
-           <string>X1:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QSlider" name="x1Slider">
-          <property name="maximum">
-           <number>320</number>
-          </property>
-          <property name="singleStep">
-           <number>1</number>
-          </property>
-          <property name="value">
-           <number>200</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="tickPosition">
-           <enum>QSlider::TicksBelow</enum>
-          </property>
-          <property name="tickInterval">
-           <number>60</number>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_4">
-        <item>
-         <widget class="QLabel" name="label_5">
-          <property name="text">
-           <string>Y1:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QSlider" name="y1Slider">
-          <property name="maximum">
-           <number>361</number>
-          </property>
-          <property name="singleStep">
-           <number>1</number>
-          </property>
-          <property name="sliderPosition">
-           <number>200</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="tickPosition">
-           <enum>QSlider::TicksBelow</enum>
-          </property>
-          <property name="tickInterval">
-           <number>40</number>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-     </layout>
-    </item>
-   </layout>
-  </widget>
   <widget class="QRadioButton" name="enableRB">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>60</x>
      <y>130</y>
      <width>108</width>
      <height>23</height>
@@ -288,13 +166,13 @@
     <string>Enable</string>
    </property>
    <attribute name="buttonGroup">
-    <string>buttonGroup</string>
+    <string notr="true">buttonGroup</string>
    </attribute>
   </widget>
   <widget class="QRadioButton" name="disableRB">
    <property name="geometry">
     <rect>
-     <x>130</x>
+     <x>150</x>
      <y>130</y>
      <width>108</width>
      <height>23</height>
@@ -307,7 +185,7 @@
     <bool>true</bool>
    </property>
    <attribute name="buttonGroup">
-    <string>buttonGroup</string>
+    <string notr="true">buttonGroup</string>
    </attribute>
   </widget>
  </widget>
@@ -342,70 +220,6 @@
     <hint type="destinationlabel">
      <x>285</x>
      <y>207</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>x0Slider</sender>
-   <signal>sliderMoved(int)</signal>
-   <receiver>FilterDialog</receiver>
-   <slot>updateX0(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>81</x>
-     <y>32</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>29</x>
-     <y>148</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>y0Slider</sender>
-   <signal>sliderMoved(int)</signal>
-   <receiver>FilterDialog</receiver>
-   <slot>updateY0(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>100</x>
-     <y>61</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>19</x>
-     <y>174</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>x1Slider</sender>
-   <signal>sliderMoved(int)</signal>
-   <receiver>FilterDialog</receiver>
-   <slot>updateX1(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>193</x>
-     <y>31</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>260</x>
-     <y>136</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>y1Slider</sender>
-   <signal>sliderMoved(int)</signal>
-   <receiver>FilterDialog</receiver>
-   <slot>updateY1(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>218</x>
-     <y>55</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>262</x>
-     <y>179</y>
     </hint>
    </hints>
   </connection>
